fix: background color inconsistency saat horizontal scroll code block
- Ganti var(--bg-dark) ke var(--color-box-dark) pada div.highlighter-rouge
- Tambah background-color pada div.highlight supaya konsisten saat scroll
- Fix di post.scss dan project.scss

--- a/assets/css/post.scss
+++ b/assets/css/post.scss
@@ -302,11 +302,12 @@ div.highlighter-rouge {
     overflow-x: auto;
     border-radius: .4rem;
     box-sizing: border-box;
-    background-color: var(--bg-dark);
+    background-color: var(--color-box-dark);
 }
 
 div.highlighter-rouge div.highlight {
     padding: 1rem 1rem;
+    background-color: var(--color-box-dark);
 }
 // END Codeblock
 
